Initial WIP version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,22 @@ execute_process(COMMAND node -p "require('@nodegui/nodegui/plugin').CMAKE_HELPER
 string(REPLACE "\n" "" NODEGUI_PLUGIN_CMAKE_HELPER ${NODEGUI_PLUGIN_CMAKE_HELPER})
 string(REPLACE "\"" "" NODEGUI_PLUGIN_CMAKE_HELPER ${NODEGUI_PLUGIN_CMAKE_HELPER})
 include("${NODEGUI_PLUGIN_CMAKE_HELPER}")
+include(./config/qtsvg.cmake)
 
 # -------------- User Config ---------------
-set(PLUGIN_ADDON_NAME "nodegui_plugin_statusbar")
+set(PLUGIN_ADDON_NAME "nodegui_plugin_svg")
 
 project(${PLUGIN_ADDON_NAME})
 
 add_library(${PLUGIN_ADDON_NAME} SHARED  
     "${CMAKE_JS_SRC}"
     "${PROJECT_SOURCE_DIR}/src/cpp/main.cpp"
-    "${PROJECT_SOURCE_DIR}/src/cpp/QStatusBar/qstatusbar_wrap.cpp"
-    "${PROJECT_SOURCE_DIR}/src/cpp/QStatusBar/nstatusbar.hpp"
+    "${PROJECT_SOURCE_DIR}/src/cpp/QSvgWidget/qsvgwidget_wrap.cpp"
+    "${PROJECT_SOURCE_DIR}/src/cpp/QSvgWidget/nsvgwidget.hpp"
 ) 
 
 AddPluginConfig(${PLUGIN_ADDON_NAME})
+AddQtSvgSupport(${PLUGIN_ADDON_NAME})
 
 target_include_directories(${PLUGIN_ADDON_NAME} PRIVATE 
     "${CMAKE_JS_INC}" 
@@ -29,4 +31,3 @@ target_include_directories(${PLUGIN_ADDON_NAME} PRIVATE
 target_link_libraries(${PLUGIN_ADDON_NAME} PRIVATE
     "${CMAKE_JS_LIB}"
 )
-
