--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "nodegui-plugin-svg",
   "version": "1.0.3",
   "description": "Plugin for NodeGUI that allows to work with QSvgWidget",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "index.js",
+  "typings": "index.d.ts",
   "repository": "git@github.com/Ty3uK/nodegui-plugin-svg.git",
 	"homepage": "https://github.com/Ty3uK/nodegui-plugin-svg",
   "scripts": {
     "build": "tsc && npm run build:addon",
     "build:addon": "cross-env CMAKE_BUILD_PARALLEL_LEVEL=8 cmake-js compile",
     "dev": "npm run build && qode dist/demo.js",
-    "postinstall": "node install.js"
+    "postinstall": "node install.js",
+    "publish": "./publish.sh"
   },
   "author": "Maksim Karelov <max.karelov@gmail.com>",
   "license": "MIT",
